# nanosam2

./: .gitignore  README.md  pyproject.toml
demos/: live_demo.py  video_frames_demo.py
docs/: ONBOARDING.md
nanosam2/sam2/: __init__.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
nanosam2/sam2/modeling/: sam2_base.py
nanosam2/sam2/modeling/sam/: prompt_encoder.py  transformer.py
tools/: onnx_export.py
