[project]
name = "nanosam2"
version = "1.0"
description = "nanosam2: Segment Anything in Images and Videos, only tiny."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "matplotlib>=3.11.0",
    "numpy>=1.24.4",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxsim>=0.6.5",
    "opencv-python>=4.13.0.92",
    "pillow>=9.4.0",
    "pycocotools>=2.0.11",
    "requests>=2.34.2",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "tqdm>=4.66.1",
]

[build-system]
requires = [
    "setuptools>=61.0",  
    "torch>=2.3.1",
    ]
build-backend = "setuptools.build_meta"
